--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,5 +24,7 @@ jobs:
         run: yarn install
 
       # Run scripts
+      - name: Prep test
+        run: ./node_modules/@graphprotocol/graph-cli/bin/run codegen
       - name: Test
         run: ./node_modules/@graphprotocol/graph-cli/bin/run test -v 0.6.0-rc.2
