--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "create-local": "graph create --node http://localhost:8020/ network-monitoring-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ network-monitoring-subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 network-monitoring-subgraph",
-    "test": "graph test"
+    "test": "yarn && yarn prep:test && yarn codegen && graph test",
+    "prep:test": "mustache ./config/test.json subgraph.template.yaml > subgraph.yaml"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.61.0",
     "@graphprotocol/graph-ts": "0.30.0"
   },
-  "devDependencies": { "matchstick-as": "0.5.0" }
+  "devDependencies": {
+    "matchstick-as": "0.5.0",
+    "mustache": "^4.2.0"
+  }
 }
