--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "create-local": "graph create --node http://localhost:8020/ network-monitoring-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ network-monitoring-subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 network-monitoring-subgraph",
-    "test": "yarn && yarn prep:test && yarn codegen && graph test",
-    "prep:test": "mustache ./config/test.json subgraph.template.yaml > subgraph.yaml"
+    "test": "yarn && yarn codegen && graph test",
+    "deploy-arbitrum-sepolia": "yarn && yarn codegen && graph build --network arbitrum-sepolia && graph deploy --studio network-monitoring-subgraph"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.71.0",
