chore: added arbitrum deployment info

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "remove-local": "graph remove --node http://localhost:8020/ network-monitoring-subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 network-monitoring-subgraph",
     "test": "yarn && yarn codegen && graph test",
-    "deploy-arbitrum-sepolia": "yarn && yarn codegen && graph build --network arbitrum-sepolia && graph deploy --studio network-monitoring-subgraph"
+    "deploy-arbitrum-sepolia": "yarn && yarn codegen && graph build --network arbitrum-sepolia && graph deploy --studio graph-monitoring-arb-sepolia",
+    "deploy-arbitrum": "yarn && yarn codegen && graph build --network arbitrum && graph deploy --studio graph-monitoring-arbitrum"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.71.0",
